converted for standalone and fixed bugs